[package]
name = "explainers"
version = "0.1.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = ["console_error_panic_hook", "analyzer/dev"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
analyzer = { path = "./analyzer" }
proc-macro2 = "1.0.9"
syn = { version = "=1.0.19", default-features = false }
quote = "1.0.3"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"

[workspace]
members = ["hints", "analyzer"]
