[package]
name = "analyzer"
version = "0.1.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
dev = ["syn/extra-traits", "log"]

[dependencies]
syn = { version = "=1.0.35", default-features = false }
proc-macro2 = { version = "1.0.9", features = ["span-locations"] }
serde = "1.0.105"
tinytemplate = "1.1"
quote = "1.0.3"
log = { version = "0.4.8", optional = true }

[build-dependencies]
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
comrak = "0.7.0"

[dev-dependencies]
serde_yaml = "0.8.11"
