[package]
name = "analyzer"
version = "0.1.0"
authors = ["Roberto Vidal <roberto.vidal@ikumene.com>"]
edition = "2021"
build = "build.rs"

[features]
dev = ["syn/extra-traits", "log"]

[dependencies]
syn = { version = "1", default-features = false, features = ["visit", "parsing", "printing", "full", "derive", "clone-impls"]}
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
tinytemplate = "1.1"
quote = "1"
log = { version = "0.4.8", optional = true }

[build-dependencies]
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
comrak = "0.7.0"

[dev-dependencies]
serde_yaml = "0.8.11"
