[package]
name = "explainers"
version = "0.1.0"
authors = ["Roberto Vidal <roberto.vidal@ikumene.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev = ["console_error_panic_hook", "analyzer/dev", "console_log"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
analyzer = { path = "../analyzer" }
proc-macro2 = "1"
syn = { version = "1", default-features = false, features = ["visit", "parsing", "printing", "full", "derive", "clone-impls"] }
quote = "1"
console_log = { version = "0.2.0", optional = true }

[profile.release]
opt-level = "s"
